<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>
    <string name="command_hint">commands</string>
    <string name="Docker">DOCKER</string>
    <string name="change_password">Change pi user password</string>
    <string name="bt_notification_ID">bluetoothChannel</string>
    <string name="bt_notification_channel">Bluetooth</string>
    <string name="bt_notification_description">Treehouses Remote is currently connected to a device.</string>
    <string name="TestButton">TREEHOUSES</string>
    <string name="DockerButton">DOCKER PS</string>
    <string name="VersionButton">TREEHOUSES DETECTRPI</string>
    <string name="PingWIFI">TREEHOUSES PING</string>
    <string name="progress_dialog_title">Configuring RPi\'s Wi-Fi setting</string>
    <string name="progress_dialog_title_hotspot">Configuring RPi as a Hotspot</string>
    <string name="progress_dialog_message">Wait while configuring...</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="app_name">Treehouses Remote</string>
    <string name="intro_message">
        <![CDATA[


            This application allows two Android devices to carry out two-way text chat over
            Bluetooth. It demonstrates all the fundamental Bluetooth API capabilities, such as:
              (1) Scanning for other Bluetooth devices
              (2) Querying the local Bluetooth adapter for paired Bluetooth devices
              (3) Establishing RFCOMM channels/sockets
              (4) Connecting to a remote device
              (5) Transferring data over Bluetooth


        ]]>
    </string>
    <string name="cancel">Cancel</string>
    <string name="start_configuration">Start Configuration</string>
    <string name="dialog_message">Configure RPi\'s Wi-Fi setting</string>
    <string name="ssid">SSID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="error_ssid_empty">Type in the name of the network \nyou want to use </string>
    <string name="error_pwd_length">Password must have at least \neight characters.</string>
    <string name="error_pwd_confirm">Passwords do not match </string>
    <string name="config_configuring">Start configuring...</string>
    <string name="config_success">Configure Wifi successfully, IP: </string>
    <string name="config_fail">Fail to configure Wifi! Please check SSID and/or password and try again.</string>
    <string name="config_alreadyConfig">You have already configured the wifi</string>
    <string name="create_hotspot">Create Hotspot</string>
    <string name="dialog_message_hotspot">Configure RPi\'s Hotspot setting</string>
    <string name="config_alreadyConfig_hotspot">You have already configured the hotspot</string>
    <string name="app_project_name">Treehouses Remote</string>
    <string name="action_settings">Settings</string>
    <string name="action_community">Community</string>
    <string name="title_sync_settings">Sync Settings</string>
    <string name="btn_sync">Sync</string>
    <string name="menu_home">Home</string>
    <string name="menu_network">Network</string>
    <string name="menu_system">System</string>
    <string name="menu_terminal">Terminal</string>
    <string name="menu_services">Services</string>
    <string name="menu_ssh">SSH (Beta)</string>
    <string name="menu_ssh_tunnel">Tunnel</string>
    <string name="menu_about">About</string>
    <string name="menu_status">Status</string>
    <string name="initial_textview">Treehouses Remote is an Android App that communicates with headless Rasberry Pi Mobile Server running Treehouses image via Bluetooth. \n \n To start using Treehouses Remote, you will need to install the Treehouses Image on your Raspberry Pi; the download link is found below. </string>
    <string name="copyright">&#169; %s Open Learning Exchange</string>
    <string name="rights_reserved">All Rights Reserved</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="message">Message</string>
    <string name="bug">Bug</string>
    <string name="suggestion">Suggestion</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="contributors">Contributors</string>
    <string name="version_text">Version</string>
    <string name="bStatusOffline">Bluetooth Status: Offline</string>
    <string name="bStatusIdle">Bluetooth: Idle (not Connected or trying to Connect)</string>
    <string name="bStatusConnected">Bluetooth: Connected</string>
    <string name="title_activity_initial">InitialActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_tunnel">Tunnel</string>
    <string name="yes">yes</string>
    <string name="treehouses">treehouses</string>
    <string-array name="spinner_hotspot">
        <item>internet</item>
        <item>local</item>
    </string-array>
    <string name="rename_message">Changes will come into effect upon reboot of your Raspberry Pi and your device.\nNote: changing your hostname will also change your bluetooth ID</string>
    <string name="paired_devices">Raspberry Pi</string>
    <string name="all_devices">All Devices</string>
    <string name="test_connection_message">You should be able to see a flashing green light on your Raspberry Pi right now.</string>
    <string name="test_finished">The flashing has now stopped.</string>
    <string name="collect_data_title">Sharing is Caring</string>
    <string name="collect_data_message">We would like to collect your usage data in order to help us improve the Treehouses experience. This information would include location, device name and model number, and successful connections. Would you be willing to help Treehouses by sharing this data?</string>
    <string name="add_command_title">Add a Command</string>
    <string-array name="led_options">
        <item>LED Dance</item>
        <item>LED Thanksgiving</item>
        <item>LED New Years</item>
        <item>LED Heavy Metal</item>
        <item>LED Lunar New Year</item>
        <item>LED Valentine</item>
        <item>LED Carnival</item>
        <item>LED St. Patrick\'s</item>
        <item>LED Onam</item>
        <item>LED Easter</item>
        <item>LED Eid al-Fitr</item>
        <item>LED Kecak</item>
        <item>LED Christmas</item>
        <item>LED Diwali</item>
        <item>LED Lantern</item>
    </string-array>
    <string-array name="key_types">
        <item>RSA</item>
        <item>EC</item>
        <item>DSA</item>
    </string-array>
    <string-array name="faq_issues">
        <item>My Raspberry Pi is not getting discovered by my device over Bluetooth. What do I do?</item>
        <item>My device is not connecting to the Bluetooth Server on the Raspberry Pi.</item>
        <item>I just upgraded my Bluetooth, and now it is not connecting. What do I do?</item>
    </string-array>
    <string-array name="faq_answers">
        <item>Most likely, the Bluetooth server has not started/was not configured properly. If rebooting the Raspberry Pi did not work, please download the latest image from: https://treehouses.io/#!pages/download.md</item>
        <item>First, ensure that the Raspberry Pi is on and in range of your device. If so, try restarting Treehouses Remote app, and then try reconnecting. If that also fails, try going to the device settings and connect to the Raspberry Pi from there, and come back to the app.</item>
        <item>If SSH is available, try running "treehouses bluetooth restart". If that fails, try rebooting the Raspberry Pi.</item>
    </string-array>
    <string-array name="led_options_commands">
        <item>treehouses led dance</item>
        <item>treehouses led thanksgiving</item>
        <item>treehouses led newyear</item>
        <item>treehouses led heavymetal</item>
        <item>treehouses led lunarnewyear</item>
        <item>treehouses led valentine</item>
        <item>treehouses led carnival</item>
        <item>treehouses led stpatricks</item>
        <item>treehouses led onam</item>
        <item>treehouses led easter</item>
        <item>treehouses led eid</item>
        <item>treehouses led kecak</item>
        <item>treehouses led christmas</item>
        <item>treehouses led diwali</item>
        <item>treehouses led lantern</item>
    </string-array>
    <plurals name="console_copy_done">
        <item quantity="one">"Copied %1$d byte to clipboard"</item>
        <item quantity="other">"Copied %1$d bytes to clipboard"</item>
    </plurals>
    <string name="terminal_connecting">"Connecting to %1$s:%2$d via %3$s"</string>
    <string name="button_key_esc">Esc</string>
    <string name="button_key_ctrl">Ctrl</string>
    <string name="button_key_home">Home</string>
    <string name="button_key_end">End</string>
    <string name="button_key_pgup">PgUp</string>
    <string name="button_key_pgdn">PgDn</string>
    <string name="button_key_f1">F1</string>
    <string name="button_key_f2">F2</string>
    <string name="button_key_f3">F3</string>
    <string name="button_key_f4">F4</string>
    <string name="button_key_f5">F5</string>
    <string name="button_key_f6">F6</string>
    <string name="button_key_f7">F7</string>
    <string name="button_key_f8">F8</string>
    <string name="button_key_f9">F9</string>
    <string name="button_key_f10">F10</string>
    <string name="button_key_f11">F11</string>
    <string name="button_key_f12">F12</string>
    <string name="terminal_sucess">"Verified host '%1$s' key: %2$s"</string>
    <string name="terminal_failed">"Host key verification failed."</string>
    <string name="terminal_using_s2c_algorithm">"Server-to-client algorithm: %1$s %2$s"</string>
    <string name="terminal_using_c2s_algorithm">"Client-to-server algorithm: %1$s %2$s"</string>
    <string name="terminal_using_algorithm">"Using algorithm: %1$s %2$s"</string>
    <string name="terminal_kex_algorithm">Key exchange algorithm: %s</string>
    <string name="terminal_auth">"Trying to authenticate"</string>
    <string name="terminal_auth_pass">"Attempting 'password' authentication"</string>
    <string name="terminal_auth_pass_fail">"Authentication method 'password' failed"</string>
    <string name="terminal_auth_pubkey_any">"Attempting 'publickey' authentication with any in-memory public keys"</string>
    <string name="terminal_auth_pubkey_invalid">"Selected public key is invalid, try reselecting key in host editor"</string>
</resources>