<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu_network"
            android:icon="@drawable/network"
            android:title="@string/menu_network" />
        <item
            android:id="@+id/menu_system"
            android:icon="@drawable/system"
            android:title="@string/menu_system" />
        <item
            android:id="@+id/menu_terminal"
            android:icon="@drawable/terminal"
            android:title="@string/menu_terminal" />
        <item
            android:id="@+id/menu_services"
            android:icon="@drawable/circle"
            android:title="@string/menu_services" />
        <item
            android:id="@+id/menu_tunnel"
            android:icon="@drawable/ssh"
            android:title="@string/menu_tunnel" />
        <item
            android:id="@+id/menu_about"
            android:icon="@drawable/about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/menu_status"
            android:icon="@drawable/about"
            android:title="@string/menu_status" />
    </group>


</menu>
