<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium"
    android:theme="@style/AppTheme"
    android:background="@color/windowBackground">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        app:fontFamily="@font/roboto_bold"
        android:textStyle="bold"
        android:text="@string/give_feedback">

    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fontFamily="sans-serif"
            android:hint="@string/name"
            android:textColor="@color/daynight_textColor"
            android:inputType="textPersonName|textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fontFamily="sans-serif"
            android:hint="@string/email"
            android:textColor="@color/daynight_textColor"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumberWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fontFamily="sans-serif"
            android:hint="@string/phone_number"
            android:textColor="@color/daynight_textColor"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/messageWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:fontFamily="sans-serif"
            android:hint="@string/message"
            android:textColor="@color/daynight_textColor"
            android:inputType="textCapSentences"/>

    </com.google.android.material.textfield.TextInputLayout>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioButtonBug"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_large"
            android:text="@string/bug"/>
        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/radioButtonSuggestion"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_large"
            android:text="@string/suggestion"/>
    </RadioGroup>
    <Button
        android:id="@+id/btn_send_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_feedback" />
    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>