<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="@dimen/padding_normal"
    android:layout_height="match_parent"
    android:theme = "@style/AppTheme"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="@color/daynight_textColor"

        tools:context=".Fragments.AboutFragment">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="396dp"
            android:layout_height="297dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/treehouses2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:padding="@dimen/padding_normal"
            android:text="@string/initial_textview"
            android:textColor="@color/daynight_textColor"
            android:textSize="@dimen/text_size_mid"
            app:fontFamily="@font/roboto_medium"
            app:layout_constraintBottom_toTopOf="@+id/give_feedback"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/give_feedback"
            android:layout_width="373dp"
            android:layout_height="67dp"
            android:layout_marginBottom="12dp"
            android:background="#FF9800"
            android:text="@string/give_feedback"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/btn_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_normal"
            android:layout_marginLeft="@dimen/padding_normal"
            android:layout_marginEnd="@dimen/padding_normal"
            android:layout_marginRight="@dimen/padding_normal"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimary"
            android:paddingLeft="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_medium"
            android:text="Treehouses Image"
            android:textColor="@color/bg_white"
            app:layout_constraintBottom_toTopOf="@+id/btn_version"
            app:layout_constraintEnd_toStartOf="@+id/btn_gitter"
            app:layout_constraintStart_toEndOf="@+id/btn_github" />

        <Button
            android:id="@+id/btn_gitter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_normal"
            android:layout_marginLeft="@dimen/padding_normal"
            android:layout_marginEnd="@dimen/padding_normal"
            android:layout_marginRight="@dimen/padding_normal"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="gitter"
            android:textColor="@color/bg_white"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_image" />

        <Button
            android:id="@+id/btn_contributors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorPrimary"
            android:minWidth="@dimen/button_normal"
            android:text="@string/contributors"
            android:textColor="@color/bg_white"
            android:textSize="@dimen/text_size_mid"
            app:layout_constraintBottom_toTopOf="@+id/tv_copyright"
            app:layout_constraintEnd_toStartOf="@+id/btn_version"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_image"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_github"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_normal"
            android:layout_marginLeft="@dimen/padding_normal"
            android:layout_marginEnd="@dimen/padding_normal"
            android:layout_marginRight="@dimen/padding_normal"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="GitHub"
            android:textColor="@color/bg_white"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_image"
            app:layout_constraintEnd_toStartOf="@+id/btn_image"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:minWidth="@dimen/button_normal"
            android:text="version"
            android:textColor="@color/bg_white"
            android:textSize="@dimen/text_size_mid"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_contributors"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_contributors" />

        <TextView
            android:id="@+id/tv_copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/copyright"
            android:textColor="@color/daynight_textColor"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold"
            app:fontFamily="@font/roboto_medium"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rights_reserved"
            android:textColor="@color/daynight_textColor"
            android:textStyle="italic"
            app:fontFamily="@font/roboto_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>

